Mon Sep 19 16:11:12 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_home.cpp:
        
          Added missing check for null before enqueueing a primary
          key valuetype into the queue to be checked after parsing.
          If there is no primary key specified, we don't want to
          enqueue a 0, since the queue will then be non-empty but
          have no usable value to dequeue.

Mon Sep 19 14:50:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Elimiate unused exception macros.

Mon Sep 19 11:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Corrected the correction due to non-standard MSVC name,
        Thanks to Martin J.N. Corino for the correct interpretation.

Mon Sep 19 10:15:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Corrected typo at line 7 (#include "strstrea.h")

Mon Sep 19 08:50:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/run_test.pl:

        Forced commit for chmod permissions.

Mon Sep 19 08:00:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Incorrect emulated exception call for init_orb.

Fri Sep 16 15:12:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * test/IPV6/Hello.mpc:

          Removed and replaced by:

        * test/IPV6/IPV6_Hello.mpc:

          Because MPC can't work with identically named .mpc files
          even in separate directories:-(

Fri Sep 16 12:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Emulated exception incorrect macro used line 681.

Fri Sep 16 10:55:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * test/IPV6/Hello.mpc:
        * test/IPV6/Hello{.h .cpp}:
        * test/IPV6/client.cpp: